--- a/vue3-trial/package.json
+++ b/vue3-trial/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^1.0.1",
+    "axios": "^0.26.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "element-plus": "^2.0.5",
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.13",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
