--- a/vue3-trial/package.json
+++ b/vue3-trial/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.0.5",
+    "loadash": "^1.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
